--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
+		"@eslint/config-array": "^0.16.0",
 		"@nextui-org/accordion": "^2.0.32",
 		"@nextui-org/button": "^2.0.31",
 		"@nextui-org/code": "^2.0.27",
@@ -42,12 +43,15 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-unused-imports": "^3.2.0",
 		"framer-motion": "^11.2.6",
+		"glob": "^10.4.2",
 		"intl-messageformat": "^10.5.0",
 		"next": "14.2.3",
 		"next-themes": "^0.2.1",
 		"postcss": "8.4.38",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
+		"react-icons": "^5.2.1",
+		"rimraf": "^5.0.7",
 		"tailwind-variants": "^0.1.20",
 		"tailwindcss": "3.4.3",
 		"typescript": "5.0.4"
