guide login page

--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
 	"dependencies": {
 		"@eslint/config-array": "^0.16.0",
 		"@nextui-org/accordion": "^2.0.32",
-		"@nextui-org/button": "^2.0.31",
+		"@nextui-org/button": "^2.0.34",
 		"@nextui-org/code": "^2.0.27",
 		"@nextui-org/input": "^2.1.21",
 		"@nextui-org/kbd": "^2.0.28",
 		"@nextui-org/link": "^2.0.29",
 		"@nextui-org/modal": "^2.0.34",
 		"@nextui-org/navbar": "^2.0.30",
-		"@nextui-org/react": "^2.3.6",
+		"@nextui-org/react": "^2.4.2",
 		"@nextui-org/snippet": "^2.0.35",
 		"@nextui-org/switch": "^2.0.28",
 		"@nextui-org/system": "2.1.0",
@@ -32,6 +32,7 @@
 		"@typescript-eslint/eslint-plugin": "^7.10.0",
 		"@typescript-eslint/parser": "^7.10.0",
 		"autoprefixer": "10.4.19",
+		"axios": "^1.7.2",
 		"clsx": "^2.0.0",
 		"eslint": "^8.56.0",
 		"eslint-config-next": "14.2.1",
