--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
-
 		"@emotion/react": "^11.11.4",
 		"@emotion/styled": "^11.11.5",
 		"@eslint/config-array": "^0.16.0",
@@ -38,6 +37,7 @@
 		"autoprefixer": "10.4.19",
 		"axios": "^1.7.2",
 		"clsx": "^2.0.0",
+		"dayjs": "^1.11.11",
 		"eslint": "^8.56.0",
 		"eslint-config-next": "14.2.1",
 		"eslint-config-prettier": "^8.2.0",
@@ -51,6 +51,7 @@
 		"framer-motion": "^11.2.6",
 		"glob": "^10.4.2",
 		"intl-messageformat": "^10.5.0",
+		"jwt-decode": "^4.0.0",
 		"next": "^14.2.4",
 		"next-themes": "^0.2.1",
 		"postcss": "8.4.38",
