--- a/package.json
+++ b/package.json
@@ -53,10 +53,11 @@
 		"intl-messageformat": "^10.5.0",
 		"jwt-decode": "^4.0.0",
 		"next": "^14.2.4",
+		"next-auth": "^4.24.7",
 		"next-themes": "^0.2.1",
 		"postcss": "8.4.38",
-		"react": "18.3.1",
-		"react-dom": "18.3.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"react-icons": "^5.2.1",
 		"react-router-dom": "^6.24.0",
 		"react-stately": "^3.31.1",
