--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"@emotion/react": "^11.11.4",
 		"@emotion/styled": "^11.11.5",
 		"@eslint/config-array": "^0.16.0",
-		"@mui/material": "^5.15.21",
+		"@mui/material": "^5.16.1",
+		"@mui/styled-engine-sc": "^6.0.0-alpha.18",
 		"@nextui-org/accordion": "^2.0.32",
 		"@nextui-org/button": "^2.0.34",
 		"@nextui-org/code": "^2.0.27",
@@ -60,8 +61,11 @@
 		"react-dom": "^18.2.0",
 		"react-icons": "^5.2.1",
 		"react-router-dom": "^6.24.0",
+		"react-slick": "^0.30.2",
 		"react-stately": "^3.31.1",
 		"rimraf": "^5.0.7",
+		"slick-carousel": "^1.8.1",
+		"styled-components": "^6.1.11",
 		"tailwind-variants": "^0.1.20",
 		"tailwindcss": "3.4.3",
 		"typescript": "5.0.4"
