--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@emotion/react": "^11.11.4",
 		"@emotion/styled": "^11.11.5",
 		"@eslint/config-array": "^0.16.0",
+		"@heroicons/react": "^2.1.4",
 		"@mui/material": "^5.15.21",
 		"@nextui-org/accordion": "^2.0.32",
 		"@nextui-org/button": "^2.0.34",
@@ -61,6 +62,7 @@
 		"react-icons": "^5.2.1",
 		"react-router-dom": "^6.24.0",
 		"react-stately": "^3.31.1",
+		"react-type-animation": "^3.2.0",
 		"rimraf": "^5.0.7",
 		"tailwind-variants": "^0.1.20",
 		"tailwindcss": "3.4.3",
