--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
 		"next-auth": "^4.24.7",
 		"next-themes": "^0.2.1",
 		"postcss": "8.4.38",
+		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-icon": "^1.0.0",
 		"react-icons": "^5.2.1",
 		"react-router-dom": "^6.24.0",
 		"react-slick": "^0.30.2",
