--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@types/react-dom": "18.3.0",
 		"@typescript-eslint/eslint-plugin": "^7.10.0",
 		"@typescript-eslint/parser": "^7.10.0",
+		"@uploadthing/react": "^6.7.2",
 		"autoprefixer": "10.4.19",
 		"axios": "^1.7.2",
 		"clsx": "^2.0.0",
@@ -72,7 +73,8 @@
 		"styled-components": "^6.1.11",
 		"tailwind-variants": "^0.1.20",
 		"tailwindcss": "3.4.3",
-		"typescript": "5.0.4"
+		"typescript": "5.0.4",
+		"uploadthing": "^6.13.2"
 	},
 	"devDependencies": {
 		"@next/swc-win32-x64-msvc": "^15.0.0-rc.0"
