--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
 		"@uploadthing/react": "^6.7.2",
 		"autoprefixer": "10.4.19",
 		"axios": "^1.7.2",
+		"chart.js": "^4.4.3",
+		"chartjs-plugin-datalabels": "^2.2.0",
 		"clsx": "^2.0.0",
 		"dayjs": "^1.11.11",
 		"eslint": "^8.56.0",
@@ -61,6 +63,7 @@
 		"postcss": "8.4.38",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
+		"react-chartjs-2": "^5.2.0",
 		"react-dom": "^18.2.0",
 		"react-icon": "^1.0.0",
 		"react-icons": "^5.2.1",
@@ -77,6 +80,7 @@
 		"uploadthing": "^6.13.2"
 	},
 	"devDependencies": {
-		"@next/swc-win32-x64-msvc": "^15.0.0-rc.0"
+		"@next/swc-win32-x64-msvc": "^15.0.0-rc.0",
+		"@types/react-chartjs-2": "^2.5.7"
 	}
 }
