--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"chartjs-plugin-datalabels": "^2.2.0",
 		"clsx": "^2.0.0",
 		"dayjs": "^1.11.11",
+		"emailjs-com": "^3.2.0",
 		"eslint": "^8.56.0",
 		"eslint-config-next": "14.2.1",
 		"eslint-config-prettier": "^8.2.0",
