--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
 		"uploadthing": "^6.13.2"
 	},
 	"devDependencies": {
+		"@mui/x-data-grid-generator": "^7.12.1",
 		"@next/swc-win32-x64-msvc": "^15.0.0-rc.0",
 		"@types/react-chartjs-2": "^2.5.7",
 		"@types/react-slick": "^0.23.13"
