--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@emotion/styled": "^11.11.5",
 		"@eslint/config-array": "^0.16.0",
 		"@heroicons/react": "^2.1.5",
+		"@mui/lab": "^5.0.0-alpha.173",
 		"@mui/material": "^5.16.1",
 		"@mui/styled-engine-sc": "^6.0.0-alpha.18",
 		"@nextui-org/accordion": "^2.0.32",
