--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@mui/lab": "^5.0.0-alpha.173",
 		"@mui/material": "^5.16.1",
 		"@mui/styled-engine-sc": "^6.0.0-alpha.18",
+		"@mui/x-data-grid": "^7.13.0",
 		"@nextui-org/accordion": "^2.0.32",
 		"@nextui-org/button": "^2.0.34",
 		"@nextui-org/code": "^2.0.27",
