--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"react-type-animation": "^3.2.0",
 		"rimraf": "^5.0.7",
 		"slick-carousel": "^1.8.1",
+		"string-similarity": "^4.0.4",
 		"styled-components": "^6.1.11",
 		"tailwind-variants": "^0.1.20",
 		"tailwindcss": "3.4.3",
@@ -87,6 +88,7 @@
 		"@mui/x-data-grid-generator": "^7.12.1",
 		"@next/swc-win32-x64-msvc": "^15.0.0-rc.0",
 		"@types/react-chartjs-2": "^2.5.7",
-		"@types/react-slick": "^0.23.13"
+		"@types/react-slick": "^0.23.13",
+		"@types/string-similarity": "^4.0.2"
 	}
 }
